--- a/UserInterface/View/EventTableView.xaml
+++ b/UserInterface/View/EventTableView.xaml
@@ -1,12 +1,11 @@
-﻿<UserControl x:Class="UserInterface.View.AlarmView"
+﻿<UserControl x:Class="UserInterface.View.EventTableView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:viewModel="clr-namespace:UserInterface.ViewModel"
+             xmlns:local="clr-namespace:UserInterface.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-
     <UserControl.Resources>
         <Style TargetType="DataGrid">
             <!-- On mouse hover -->
@@ -64,34 +63,11 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        <Style x:Key="MyButtonStyle" TargetType="Button">
-            <Setter Property="OverridesDefaultStyle" Value="True"/>
-            <Setter Property="Margin" Value="5"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border Name="border" 
-                            BorderThickness="0"
-                            Padding="4,2" 
-                            BorderBrush="DarkGray" 
-                            CornerRadius="3" 
-                            Background="{TemplateBinding Background}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter TargetName="border" Property="BorderBrush" Value="#FFF7CE12" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
     </UserControl.Resources>
 
     <Grid>
-        <DataGrid x:Name="AlarmItems"
-                  ItemsSource="{Binding AlarmItems, UpdateSourceTrigger=PropertyChanged}"
+        <DataGrid x:Name="EventItems"
+                  ItemsSource="{Binding EventItems, UpdateSourceTrigger=PropertyChanged}"
                   IsReadOnly="True"
                   VerticalScrollBarVisibility="Auto"
                   VerticalAlignment="Top"
@@ -101,17 +77,10 @@
                   Width="700"
                   CanUserAddRows="False" Grid.Column="1" Background="#FF5E5E5E" Grid.Row="1" BorderBrush="#FF3C3C3C" FontFamily="Consolas" FontSize="14">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Alarm reported" Width="*"  Binding="{Binding AlarmReported}"/>
-                <DataGridTextColumn Header="Alarm reported by" Width="*"  Binding="{Binding AlarmReportedBy}"/>
+                <DataGridTextColumn Header="Event reported" Width="*"  Binding="{Binding EventReported}"/>
+                <DataGridTextColumn Header="Event reported by" Width="*"  Binding="{Binding EventReportedBy}"/>
                 <DataGridTextColumn Header="Message" Width="*" Binding="{Binding Message}"/>
                 <DataGridTextColumn Header="Point name" Width="*" Binding="{Binding PointName}"/>
-                <DataGridTemplateColumn>
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Button Command="{Binding DataContext.AcknowledgeAlarmCommand, ElementName=AlarmItems}" CommandParameter="{Binding Path=ID}" Content="Acknowledge alarm" Style="{StaticResource MyButtonStyle}" FontFamily="Consolas" Background="#FF94E264" Foreground="#FF252525"></Button>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
